--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit==1.28.0
+python-3.10
 tensorflow==2.13.0
 librosa==0.10.1
 soundfile==0.12.1
@@ -8,4 +9,5 @@ plotly==5.17.0
 scikit-learn==1.3.0
 markdown-it-py==4.0.0
 pydantic==2.6.0
+
 rich==14.0.0
